[package]
name = "typescriptify"
version = "0.1.5"
authors = ["nephtys <christopher.kaag@gmail.com>"]

# A short blurb about the package. This is not rendered in any format when
# uploaded to crates.io (aka this is not markdown).
description = "Typescriptify Trait and example usage"

# These URLs point to more information about the repository. These are
# intended to be webviews of the relevant data, not necessarily compatible
# with VCS tools and the like.
repository = "https://github.com/n3phtys/typescriptify"


# This is a string description of the license for this package. Currently
# crates.io will validate the license provided against a whitelist of known
# license identifiers from http://spdx.org/licenses/. Multiple licenses can be
# separated with a `/`.
license = "MIT"

[dependencies]
typescriptify-derive = "0.1"
#typescriptify-derive = { path = "typescriptify-derive" }
